--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="about">About</a>
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="research">Research</a>
+          <a class="nav-link js-scroll-trigger" href="#research">Research</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="software">Software Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#software">Software Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
       </ul>
     </div>
