--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Community detection</h3>
               <p>
-                My research mainly focuses on detecting <a href="https://en.wikipedia.org/wiki/Community_structure">communities</a> in complex networks.
-                Communities are groups of nodes that are more densely connected internally than externally.
+                My research focuses on detecting <a href="https://en.wikipedia.org/wiki/Community_structure">communities</a> in complex networks.
+                Communities are groups of nodes that are better connected internally than externally.
                 Such communities could, for example, correspond to groups of friends on social media or fields of study in citation networks.
                 There are many heuristic algorithms for community detection, but there is limited understanding about which algorithm works well on what network.
+				The most widely-used community detection method is <i>modularity maximization</i>. 
+				In <a href="https://jmlr.org/papers/v24/22-0744.html">this paper</a>, we prove that this method is equivalent to minimizing an angular distance in a hyperspherical geometry. 
               </p>
             </div>
           </div>
@@ -133,7 +135,7 @@
                 For many machine learning tasks, there exist many measures to quantify the similarity between two outcomes.
                 These measures are used to validate the performance of a machine learning algorithm by measuring the similarity between the outcome of the algorithm and the desired ('true') outcome.
                 However, there are many of these validation measures, making it difficult to decide which one to use.
-                This choice is especially important, since many of these validation measures have inherent biases towards certain outcomes, which may lead to an unfair or suboptimal algorithm being chosen in practice.
+                This choice is especially important since many of these validation measures have inherent biases towards certain outcomes, which may lead to an unfair or suboptimal algorithm being chosen in practice.
               </p>
               <p>
                 For the machine learning tasks of clustering and classification, we mathematically analyzed the most popular validation measures, which led to recommendations about which measure to use in what setting.
@@ -146,24 +148,12 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Epidemiological modeling for COVID-19</h3>
               <p>
-                Since the start of the COVID-19 pandemic, we have been modeling the effect of mobility in the spread of the infections.
+                During the COVID-19 pandemic, we modeled the effect of mobility in the spread of the infections.
                 This led to <a href="https://royalsocietypublishing.org/doi/10.1098/rsif.2020.0936">this publication in JRSI</a>. An interview about this project can be found in <a href="https://www.cursor.tue.nl/en/background/2020/juni/week-3/mathematics-against-corona/">the Cursor</a>
                 and a blog about this project (in Dutch) can be found on <a href="https://www.nemokennislink.nl/facesofscience/blogs/wiskunde-tegen-covid/">NEMO kennislink</a>
               </p>
             </div>
           </div>
-        
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-            <h3 class="mb-0">Preventive maintenance (Bachelor thesis)</h3>
-            <p>
-              For the completion of the Bachelor Applied Mathematics, I analysed a stochastic degradation model and created an algorithm to obtain the optimal maintenance policy.
-              This work has been rewarded with a 9.5/10.
-              The thesis can be found <a href="https://pure.tue.nl/ws/portalfiles/portal/113781963/Bep_Martijn_G_sgens.pdf">here</a>.
-            </p>
-            </div>
-          </div>
-        </div>
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="experience">
