Added Louvain visualization

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           
           <div class="resume-item mb-5">
             <span class="d-lg-none d-lg-block" style="float: right">
-              <iframe src="html/CommunityGraph.html" class="mx-auto mb-2" style="width:400px; height: 400px; max-width: 100%; float: right; border-width: 0px;" marginwidth="0" marginheight="5" scrolling="no"></iframe>
-              <p style="text-align: center; font-size: 1em" class="subheading">An example of a graph with community structure.</p>
+              <iframe src="html/LouvainExample.html" class="mx-auto mb-2" style="width:400px; height: 350px; max-width: 100%; float: right; border-width: 0px;" marginwidth="0" marginheight="5" scrolling="no"></iframe>
+              <p style="text-align: center; font-size: 1em" class="subheading">An interactive visualization of the Louvain algorithm for community detection.</p>
             </span>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Community detection</h3>
@@ -190,7 +190,7 @@
                 An example of such a visualization is given below, taken from <a href="https://www.networkpages.nl/stopping-network-bottlenecks-before-they-stop-you/">this blog</a> about bottleneck detection algorithms.
               </p>
             </div>
-            <div style="min-width: 600px;">
+            <div style="min-width: 400px; max-width: 100% !important;">
               <iframe src="html/BottleneckDetection.html" class="mx-auto mb-2" style="width:100%; height: 400px; float: right; border-width: 0px;" marginwidth="0" marginheight="5" scrolling="no" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+10)+'px';"></iframe>
             </div>
           </div>
