--- a/html/CommunityGraph.html
+++ b/html/CommunityGraph.html
@@ -261,8 +261,9 @@
         // Unfix the subject position now that it’s no longer being dragged.
         function dragended(event) {
           if (!event.active) simulation.alphaTarget(0);
-          event.subject.fx = null;
-          event.subject.fy = null;
+          // Freeze after dragging
+          //event.subject.fx = null;
+          //event.subject.fy = null;
         }
 
         // When this cell is re-run, stop the previous simulation. (This doesn’t
