--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 Communities are groups of nodes that are better connected internally than externally.
                 Such communities could, for example, correspond to groups of friends on social media or fields of study in citation networks.
                 There are many heuristic algorithms for community detection, but there is limited understanding about which algorithm works well on what network.
-                The most widely-used community detection method is <i>modularity maximization</i>. 
-                In <a href="https://jmlr.org/papers/v24/22-0744.html">this paper</a>, we prove that this method is equivalent to minimizing an angular distance in a hyperspherical geometry. 
+                The most widely-used community detection method is <i>modularity maximization</i>.
+                In <a href="https://jmlr.org/papers/v24/22-0744.html">this paper</a>, we prove that this method is equivalent to minimizing an angular distance in a hyperspherical geometry. In <a href="https://www.frontiersin.org/articles/10.3389/fcpxs.2024.1331320/full">another paper</a>, we prove that several other community detection methods have the same hyperspherical structure.
               </p>
             </div>
           </div>
@@ -330,19 +330,12 @@
         <h2 class="mb-5">Interests</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Music</h3>
-              <p>
-                I play bass guitar in the band <a href="https://www.facebook.com/randomprecisionmusic/">Random Precision</a> with which we have been playing on various events at the TU/e campus.
-              </p>
+              <h3 class="mb-0">Music (Bass guitar, guitar and keyboard)</h3>
             </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Brewing beer</h3>
-              <p>
-                Together with a friend, we have been occasionally brewing beer in the last few years.
-                The beer is unfortunately not commercially available.
-              </p>
+              <h3 class="mb-0">Bouldering</h3>
             </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
