--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="subheading mb-3">Eindhoven -
             <a href="mailto:contact@martijngosgens.nl">contact@martijngosgens.nl</a>
           </div>
-          <div class="subheading mb-1">Postdoctoral Researcher at Toronto Metropolitan University
+          <div class="subheading mb-1">Postdoctoral Researcher at CWI Amsterdam
           </div>
         </div>
         <ul class="list-inline list-social-icons mb-0">
@@ -116,6 +116,15 @@
           <p>Link to <a href="https://scholar.google.com/citations?user=iusaOxAAAAAJ&hl=nl">my Google Scholar profile</a>.</p>
 
 	  <div class="resume-item mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">(Distributionally) robust optimization</h3>
+              <p>
+                My research at CWI concerns optimizing under uncertainty.
+              </p>
+            </div>
+          </div>
+	      
+	      <div class="resume-item mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Asynchronous Majority Dynamics</h3>
               <p>
