--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h1 class="mb-1 lowercase">Martijn
             <span class="text-primary" style="text-transform:initial">Gösgens</span>
           </h1>
-          <div class="subheading mb-3">Eindhoven -
+          <div class="subheading mb-3">Utrecht -
             <a href="mailto:contact@martijngosgens.nl">contact@martijngosgens.nl</a>
           </div>
           <div class="subheading mb-1">Postdoctoral Researcher at CWI Amsterdam
@@ -119,7 +119,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">(Distributionally) robust optimization</h3>
               <p>
-                My research at CWI concerns optimizing under uncertainty.
+                My research at CWI concerns optimizing under uncertainty. In particular, we study robustifying Gradient Descent to adversarial gradient perturbations. 
               </p>
             </div>
           </div>
@@ -309,7 +309,21 @@
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="education">
       <div class="my-auto">
         <h2 class="mb-5">Education</h2>
-    
+	<div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+                <h3 class="mb-0">Eindhoven University of Technology</h3>
+                <div class="subheading mb-1">PhD in Probability Theory</div>
+                <p>
+                    	My PhD thesis, entitled <a href="https://research.tue.nl/en/publications/detecting-small-and-large-communities-in-networks">Detecting Small and Large Communities in Networks</a>, 
+			was conducted under the supervision of <i>Remco van der Hofstad</i> and <i>Nelly Litvak</i>, and was awarded the <a href="https://www.vvsor.nl/articles/van-zwet-award-winner-2025/">Van Zwet PhD thesis award</a> by VVS-OR (Netherlands Society for Statistics and Operations Research).
+                </p>
+            </div>
+            <div class="resume-date text-md-right">
+                <span class="text-primary">2020 - 2024</span>
+            </div>
+        </div>
+
+	      
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
                 <h3 class="mb-0">Eindhoven University of Technology</h3>
